infrastructure/nas/monitoring/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmauth-global-write
  namespace: monitoring
spec:
  parentRefs:
  - name: internal-gw
    namespace: infrastructure
  hostnames:
  - "vm-write.${domain_wahoo_li:=wahoo.li}"
  - "vm-write.${domain_absolutist_it:=absolutist.it}"
  rules:
  - backendRefs:
    - name: vmauth-global-write
      port: 8427
